# Engram

./: CMakeLists.txt  Readme.md  brain.engram
.github/instructions/: code_base.instructions.md
examples/: CMakeLists.txt  associative.c  basic.c  conversation.c  ingest_knowledge.c  learn_file.c  resource_limited.c  streaming.c
include/engram/: allocator.h  config.h  engram.h  platform.h  types.h
knowledge/: astronomy.txt  black_holes.txt  college_physics.txt  physics.engram  quantum_mechanics.txt  radar.txt  synthetic_aperture_radar.txt  universe.txt
paper/: engram_paper.tex
sandbox/: CMakeLists.txt  bench.c  main.c
src/: core.h  engram.c  internal.h  platform.h  processes.h  regions.h  system.h
src/compute/: vulkan_compute.c
src/core/: allocator.c  cluster.c  engram.c  hnsw.c  neuron.c  pathway.c  propagate.c  substrate.c  synapse.c
src/platform/: thread_posix.c  thread_win32.c  time_posix.c  time_win32.c
src/processes/: consolidation.c  decay.c  encoding.c  plasticity.c  propagate.c  replay.c
src/regions/: amygdala.c  brainstem.c  cortex.c  hippocampus.c  neocortex.c  thalamus.c  wernicke.c
src/system/: arousal.c  clock.c  governor.c  persistence.c
src/util/: hash.c  random.c  vector.c
tests/: CMakeLists.txt  test_arousal.c  test_consolidation.c  test_encoding.c  test_engram.c  test_governor.c  test_neuron.c  test_pathway.c  test_persistence.c  test_recall.c  test_substrate.c  test_synapse.c
